CSS/style.css
/* MAIN CONTAINER */
body {
    margin: 0;
    padding-top: 24px;
    overflow-x: hidden;
    font-family: Inter;
}

.header-container {
    width: 100%;
    max-width: 1920px;
    background-color: white;
    height: 122px;
    z-index: 1000;
}

.header-fixed {
    position: fixed;
    padding-top: 24px;
    top: 0;
    left: 0;
    width: 100%;
    height: 122px;
    z-index: 1000;
}

.header-scroll {
    .search-bar {
        left: calc(var(--original-left) - 74px);
        width: 876px;
    }

    .bar-container,
    .button.company,
    .button.region,
    .button.sector,
    .button.industry,
    .button.language,
    .button.events {
        left: calc(var(--original-left) - 149px);
    }


    .button-link .button.about, 
    .button-link .button.contact,
    .button-link .button.login,
    .button-link .button.register, 
    .dropdown{
        left: calc(var(--original-left) + 139px);
    }


}

/* NAV BAR BUTTONS */
/* Company, Region, Sector, Industry, Language, Events */
.button {
    height: 48px;
    padding-top: 8px;
    padding-bottom: 8px;
    border-radius: 4px;
    overflow: hidden;
    justify-content: center;
    align-items: center;
    display: inline-flex;
    position: absolute;
    display: flex;
    gap: 10px;
    text-align: center;
    color: #242424;
    font-size: 18px;
    font-weight: 400;
    line-height: 32px;
    word-wrap: break-word;
    top: 72px;
    transition: left 0.3s ease;
}

.button.company {
    width: 113px;
    --original-left: 221px; 
    left: var(--original-left);
}

.button.region {
    width: 92px;
    --original-left: 334px; 
    left: var(--original-left);
}

.button.sector {
    width: 86px;
    --original-left: 434px; 
    left: var(--original-left);
}

.button.industry {
    width: 104px;
    --original-left: 528px; 
    left: var(--original-left);
}

.button.language {
    width: 117px;
    --original-left: 640px; 
    left: var(--original-left);
}

.button.events {
    width: 88px;
    --original-left: 765px; 
    left: var(--original-left);
}

.button-link {
    display: inline-block;
    text-decoration: none;
}

/* About, Contact, Login, Register */
.button-link .button {
    cursor: pointer;
    text-decoration: none;
    height: 48px;
    /* padding: 8px; */
    border-radius: 4px;
    overflow: hidden;
    justify-content: center;
    align-items: center;
    display: inline-flex;
    position: absolute;
    display: flex;
    gap: 10px;
    text-align: center;
    color: #242424;
    font-size: 18px;
    font-weight: 400;
    line-height: 32px;
    word-wrap: break-word;
    top: 4px;
    transition: left 0.3s ease;
}

.button-link .button.about {
    width: 84px;
    --original-left: 1287px; 
    left: var(--original-left);
}

.button-link .button.contact {
    width: 114px;
    --original-left: 1379px; 
    left: var(--original-left);
}

.button-link .button.login {
    width: 80px;
    --original-left: 1501px; 
    left: var(--original-left);
}

.button-link .button.register {
    width: 102px;
    color: #1373AF;
    --original-left: 1589px; 
    left: var(--original-left);
}

.button-content {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    font-size: 18px;
    font-family: 'Noto Sans', sans-serif;
    font-weight: 400;
}

.icon {
    width: 24px;
    height: 24px;
    position: relative;
}

.icon div {
    width: 22px;
    height: 22px;
    position: absolute;
    background: #242424;
    left: 1px;
    top: 1px;
}

.separator {
    width: 1920px;
    height: 0;
    position: absolute;
    border: 1px #D7D7D7 solid;
    top: 144px;
    left: 0;
}

/* SEARCH BAR */
.search-bar {
    width: 713px;
    height: 56px;
    position: absolute;
    border-bottom: 1px #7B7B7B solid;
    display: flex;
    align-items: center;
    gap: 10px;
    top: 0;
    --original-left: 528px;
    left: var(--original-left);
    transition: left 0.3s ease;
}

.search-input {
    flex-grow: 1;
    height: 100%;
    padding: 8px 8px 0px 8px;
    border: none;
    font-size: 18px;
    font-family: 'Inter';
    box-shadow: none; 
    outline: none;
}

.search-input::placeholder {
    color: #7B7B7B;
}

.search-button {
    width: 48px;
    height: 48px;
    border: none;
    background: none;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 4px;
    cursor: pointer;
}

.search-button img {
    width: 24px;
    height: 24px;
}

/* LOGO */
.bar-container {
    width: 240px;
    height: 40px;
    padding: 8px;
    position: fixed;
    display: inline-flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 8px;
    top: 16px;
    --original-left: 229px;
    left: var(--original-left);
    transition: left 0.3s ease;
}

.logo-image {
    width: 224px; 
    height: 24px;
    padding-top: 8px;
    padding-bottom: 8px;
    background-image: url('../Assets/logo.svg');
    background-size: contain;
    background-repeat: no-repeat;
    background-position: left top;
}

/* LANGUAGE DROPDOWN IN NAV BAR */
.dropdown {
    position: absolute;
    top: calc(4px + 48px + 8px);
    padding-top: 20px;
    display: inline-block;
    transition: left 0.3s ease;
    --original-left: 1581px; 
    left: var(--original-left);
}

.dropdown-button {
    width: 117px;
    height: 48px;
    padding: 8px;
    border: none;
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    position: relative;
}

.icon {
    width: 24px; 
    height: 24px; 
    margin-right: 8px;
}

.icon img {
    width: 100%;
    height: auto;
}

.dropdown-content {
    display: none;
    position: absolute;
    top: 100%; /* Aligns the dropdown below the button */
    left: 0;
    width: 100%;
    border: 1px solid #ccc;
    border-radius: 4px;
    background-color: #fff;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
    z-index: 1;
}
/* ... */

